<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homeless Helper NYC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="find_food">Find Food</string>
    <string name="find_shelter">Find Shelter</string>
    <string name="find_resources">Find Resources</string>
    <string name="report_person">Report a Homeless Person</string>
    <string name="help_community">Help the Community</string>
    <string name="foodbank">Food Bank</string>
    <string name="foodstampcenter">Food Stamp Center</string>
    <string name="library">Library</string>
    <string name="shelter">Shelter</string>
    <string name="homebase_site">HomeBase Site</string>
    <string name="address">Address</string>
    <string name="info">Information</string>
    <string name="hours">Hours</string>
    <string name="facility_information">Facility Information</string>
    <string name="map">Map</string>
    <string name="resource">Resource</string>
    <string name="moreinfo">More Information</string>
    <string name="opportunity">Community Opportunity</string>
    <string name="faqs">Frequently Asked Questions</string>
    <string name="report_description">Report the location of a homeless person who would benefit from City outreach services.</string>
    <string name="report_hint">Enter details about the person and their location.</string>
    <string name="location">Location</string>
    <string name="location_hint">Where is this person located?</string>
    <string name="submit">Submit</string>

</resources>
